[package]
name = "seite"
version = "0.1.6"
edition = "2021"
license = "MIT/Apache-2.0"

[dependencies]
anyhow = "1.0.83"
clap = { version = "4.5.4", features = ["derive"] }
itertools = "0.13.0"
pulldown-cmark = "0.11.0"
json = { package = "serde_json", version = "1.0.133" }
tera = "1.19.1"
toml = "0.8.19"
